--- a/Basilisk/Chat/Messages/MessageCollectionViewItem.xib
+++ b/Basilisk/Chat/Messages/MessageCollectionViewItem.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19455" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19455"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -32,7 +32,7 @@
         <collectionViewItem id="7Ow-tk-J0p" customClass="MessageCollectionViewItem" customModule="Basilisk" customModuleProvider="target">
             <connections>
                 <outlet property="contentTextField" destination="o48-oU-OEL" id="bYm-Xa-lhU"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="zyv-TE-fhF"/>
+                <outlet property="view" destination="Hz6-mo-xeY" id="HlY-97-2L0"/>
             </connections>
         </collectionViewItem>
     </objects>
